Add localise text to InputController

--- a/iBXCommon/iBXCommon/Resources/en.lproj/BxCommonLocalizable.strings
+++ b/iBXCommon/iBXCommon/Resources/en.lproj/BxCommonLocalizable.strings
@@ -65,6 +65,9 @@
 
 //! InputTableController
 "InputTableSecurityText" = "[hidden text]";
+"InputTableDone" = "Done";
+"InputTableBack" = "Back";
+"InputTableNext" = "Next";
 
 //! SpeechRecognition
 "SpeechRecognitionErrorMessage" = "Voice actions wasn't recognized";
