--- a/iBXCommon/iBXCommon/Resources/ru.lproj/BxCommonLocalizable.strings
+++ b/iBXCommon/iBXCommon/Resources/ru.lproj/BxCommonLocalizable.strings
@@ -76,3 +76,8 @@
 "PNMessageQueueCloseButtonTitle" = "Закрыть";
 "PNMessageQueueViewButtonTitle" = "Просмотр";
 "PNMessageQueueLastTitle" = "последнее";
+
+//! Location
+"MapLocationError" = "Невозможно определить местоположение";
+"MapLocationDeniedError" = "Отказано в доступе к обнаружению местоположения";
+"MapLocationDisabledError" = "Обнаружению местоположения отключено";
